<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/action_menu_text_delete"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        android:title="@string/action_menu_image_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_menu_image_move_back"
        android:title="@string/action_menu_image_move_back"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_menu_text_move_toprevious"
        android:title="@string/action_menu_image_move_toprevious"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_menu_text_move_tonext"
        android:title="@string/action_menu_image_move_tonext"
        app:showAsAction="never" />
</menu>